nullaway_error_5D9EE4A2-BA05-4C7C-B3BE-74FDA6D8DAE1.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/event/ApplicationListenerMethodAdapter.java:339: error: [NullAway] dereferenced expression result is @Nullable
		if (result.getClass().isArray()) {
		          ^
    (see http://t.uber.com/nullaway )
